# zhongmei-demo

./: .gitignore  CLAUDE.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  vite.config.ts
plans/: ai-writing-system-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/mock/: data.ts
src/pages/: AIWritingPage.tsx  ApprovalPage.tsx  ChatPage.tsx  DocumentPage.tsx  KnowledgeBasePage.tsx  ReportPage.tsx
src/services/: fileParserService.ts  knowledgeBaseService.ts  ragflowService.ts  reportStorageService.ts
src/types/: index.ts  mammoth.d.ts
src/utils/: tauriFetch.ts
