[package]
name = "text-demo"
version = "0.1.0"
description = "Text Demo Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "text_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-http = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
